Finally got the spacing of the header correct for mobile display

--- a/assets/style.css
+++ b/assets/style.css
@@ -18,6 +18,7 @@ body {
 @media (max-width: 430px) {
     .display-2 {
         font-size: 20vw;
+        margin-left: -5vw;
     }
     body {
         object-fit: cover;
